# hledger-receipt-processing

./: .pre-commit-config.yaml  pyproject.toml
src/hledger_receipt_processing/: __init__.py
src/hledger_receipt_processing/editing/: edit_receipt_tui.py
src/hledger_receipt_processing/management/: get_all_hledger_flow_accounts.py
src/hledger_receipt_processing/matching/: ask_user_action.py  helper.py  user_interaction.py
src/hledger_receipt_processing/matching/linking/: few_matches.py  helper.py  many_matches.py  no_matches.py  one_match.py
src/hledger_receipt_processing/matching/manual_actions/: alternate_currency_withdrawl.py  create_seach_transaction.py  helper.py  inject_receipt_into_csv_transaction.py  inject_transaction_into_receipt.py  widen_amount_range.py  widen_date_range.py
src/hledger_receipt_processing/matching/searching/: alternate_currency_withdrawl.py  helper.py  match_handler.py  match_receipt.py  match_receipt_transaction.py  matching.py
src/hledger_receipt_processing/reading_history/: load_receipts_from_dir.py
src/hledger_receipt_processing/receipt_transaction_matching/: compare_transaction_to_receipt.py  get_bank_data_from_transactions.py  read_receipt.py
src/hledger_receipt_processing/receipts_to_objects/: get_asset_categories.py  group_images.py  make_receipt_labels.py
src/hledger_receipt_processing/receipts_to_objects/edit_images/: crop_image.py  drawing.py  rotate_all_images.py
src/hledger_receipt_processing/receipts_to_objects/label/: create_label.py  improve_labels.py  load_label.py
